# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

group("ability_package") {
  deps = [
    "ability:ohos.ability",
    "ability/ability_result:ohos.ability.ability_result",
    "ability/connect_options:ohos.ability.connect_options",
    "app:ohos.app",
    "app/ability:ohos.app.ability",
    "app/ability/ability_constant:ohos.app.ability.ability_constant",
    "app/ability/ability_delegator_registry:ohos.app.ability.ability_delegator_registry",
    "app/ability/ability_stage:ohos.app.ability.ability_stage",
    "app/ability/app_recovery:ohos.app.ability.app_recovery",
    "app/ability/common:ohos.app.ability.common",
    "app/ability/completion_handler:ohos.app.ability.completion_handler",
    "app/ability/configuration:ohos.app.ability.configuration",
    "app/ability/context_constant:ohos.app.ability.context_constant",
    "app/ability/dialog_request:ohos.app.ability.dialog_request",
    "app/ability/error_manager:ohos.app.ability.error_manager",
    "app/ability/open_link_options:ohos.app.ability.open_link_options",
    "app/ability/start_options:ohos.app.ability.start_options",
    "app/ability/ui_ability:ohos.app.ability.ui_ability",
    "app/ability/want:ohos.app.ability.want",
    "app/ability/want_constant:ohos.app.ability.want_constant",
    "application:ohos.application",
    "application/error_observer:ohos.application.error_observer",
    "application/event_hub:ohos.application.event_hub",
    "application/test_runner:ohos.application.test_runner",
  ]
}
