# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("AbilityKit") {
  sources = [ "index.cj" ]

  cj_deps = [
    "../../ohos/app/ability/ability_constant:ohos.app.ability.ability_constant",
    "../../ohos/app/ability/ability_stage:ohos.app.ability.ability_stage",
    "../../ohos/app/ability/app_recovery:ohos.app.ability.app_recovery",
    "../../ohos/app/ability/common:ohos.app.ability.common",
    "../../ohos/app/ability/completion_handler:ohos.app.ability.completion_handler",
    "../../ohos/app/ability/configuration:ohos.app.ability.configuration",
    "../../ohos/app/ability/context_constant:ohos.app.ability.context_constant",
    "../../ohos/app/ability/dialog_request:ohos.app.ability.dialog_request",
    "../../ohos/app/ability/error_manager:ohos.app.ability.error_manager",
    "../../ohos/app/ability/open_link_options:ohos.app.ability.open_link_options",
    "../../ohos/app/ability/start_options:ohos.app.ability.start_options",
    "../../ohos/app/ability/ui_ability:ohos.app.ability.ui_ability",
    "../../ohos/app/ability/want:ohos.app.ability.want",
    "../../ohos/app/ability/want_constant:ohos.app.ability.want_constant",
  ]

  cj_external_deps = [
    "bundlemanager_cangjie_wrapper:ohos.bundle.bundle_manager",
    "accesscontrol_cangjie_wrapper:ohos.ability_access_ctrl",
  ]

  subsystem_name = "ability"
  part_name = "ability_cangjie_wrapper"
}