# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.ability") {
  sources = [
    "ability.cj",
    "ability_configuration.cj",
    "ability_constant.cj",
    "ability_context.cj",
    "error_manager.cj",
    "ability_error_observer.cj",
    "ability_error_observer_ffi.cj",
    "ability_errorcode.cj",
    "ability_stage.cj",
    "ability_stage_context.cj",
    "app_recovery.cj",
    "application_context.cj",
    "base_ability.cj",
    "callback_utils.cj",
    "callee.cj",
    "configuration.cj",
    "connect_options.cj",
    "context.cj",
    "context_constant.cj",
    "element_name.cj",
    "hilog.cj",
    "parse_json.cj",
    "want.cj",
    "want_constant.cj",
  ]

  cj_external_deps = [
    "arkui_cangjie_api:ohos.base",
    "bundlemanager_cangjie_api:ohos.bundle_manager",
    "cangjie_api:ohos.ark_interop",
    "cangjie_api:ohos.ark_interop_helper",
    "cangjie_api:ohos.encoding.json",
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
    "communication_cangjie_api:ohos.rpc",
    "global_cangjie_api:ohos.resource_manager",
    "hiviewdfx_cangjie_api:ohos.hilog",
    "multimedia_cangjie_api:ohos.image",
    "window_cangjie_api:ohos.window",
  ]

  cj_deps = [
    "../eventhub:ohos.eventhub",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:appkit_native",
    "ability_runtime:cj_ability_context_native",
    "ability_runtime:cj_ability_ffi",
    "ability_runtime:cj_abilitykit_native_ffi",
    "ability_runtime:cj_app_manager_ffi",
    "ability_runtime:cj_app_recovery_ffi",
    "ability_runtime:cj_context_ffi",
    "ability_runtime:cj_errormanager_ffi",
    "ability_runtime:cj_extensionkit_native",
    "ability_runtime:cj_insight_intent_executor",
    "ability_runtime:cj_insightintentcontext",
    "ability_runtime:cj_photo_editor_extension",
    "ability_runtime:cj_ui_extension",
    "ability_runtime:cj_want_agent_ffi",
    "ability_runtime:uiabilitykit_native",
    "access_token:cj_ability_access_ctrl_ffi",
  ]


  lib_name = "ability"
  subsystem_name = "ability"
  part_name = "ability_cangjie_api"
}
