# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.ability_delegator_registry") {
  sources = [
    "ability_delegator_registry.cj",
    "ability_monitor.cj",
    "ability_stage_monitor.cj",
    "hilog.cj",
  ]

  cj_external_deps = [
    "arkui_cangjie_api:ohos.base",
    "cangjie_api:ohos.ffi",
    "hiviewdfx_cangjie_api:ohos.hilog",
    "communication_cangjie_api:ohos.rpc",
    "cangjie_api:ohos.labels",
  ]

  cj_deps = [
    "../ability:ohos.ability",
  ]

  external_deps = [ "ability_runtime:cj_ability_ffi" ]


  lib_name = "ability_delegator_registry"
  subsystem_name = "ability"
  part_name = "ability_cangjie_api"
}
