# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.app.ability.ability_delegator_registry") {
  sources = [
    "ability_delegator_registry.cj",
    "ability_monitor.cj",
    "ability_stage_monitor.cj",
    "hilog.cj",
  ]

  cj_external_deps = [
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.ffi",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "communication_cangjie_wrapper:ohos.rpc",
    "cangjie_ark_interop:ohos.labels",
  ]

  cj_deps = [
    "../ui_ability:ohos.app.ability.ui_ability",
    "../want:ohos.app.ability.want",
    "../ability_stage:ohos.app.ability.ability_stage",
  ]

  external_deps = [ "ability_runtime:cj_ability_ffi" ]


  subsystem_name = "ability"
  part_name = "ability_cangjie_wrapper"
}
