# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/cangjie/cjc.gni")

ohos_cangjie_shared_library("ohos.app.ability.ui_ability") {
  sources = [
    "ability.cj",
    "ability_errorcode.cj",
    "ability_stage_context.cj",
    "application_context.cj",
    "callback_utils.cj",
    "callee.cj",
    "context.cj",
    "context_interop.cj",
    "hilog.cj",
    "system_object_interop.cj",
    "ui_ability.cj",
    "ui_ability_context.cj",
  ]

  cj_deps = [
    "..:ohos.app.ability",
    "../../../ability/ability_result:ohos.ability.ability_result",
    "../../../ability/connect_options:ohos.ability.connect_options",
    "../../../application/event_hub:ohos.application.event_hub",
    "../ability_constant:ohos.app.ability.ability_constant",
    "../completion_handler:ohos.app.ability.completion_handler",
    "../configuration:ohos.app.ability.configuration",
    "../context_constant:ohos.app.ability.context_constant",
    "../dialog_request:ohos.app.ability.dialog_request",
    "../open_link_options:ohos.app.ability.open_link_options",
    "../start_options:ohos.app.ability.start_options",
    "../want:ohos.app.ability.want",
  ]

  cj_external_deps = [
    "arkui_cangjie_wrapper:ohos.base",
    "bundlemanager_cangjie_wrapper:ohos.bundle.bundle_manager",
    "cangjie_ark_interop:ohos.ark_interop",
    "cangjie_ark_interop:ohos.ark_interop_helper",
    "cangjie_ark_interop:ohos.business_exception",
    "cangjie_ark_interop:ohos.encoding.json",
    "cangjie_ark_interop:ohos.ffi",
    "cangjie_ark_interop:ohos.labels",
    "communication_cangjie_wrapper:ohos.rpc",
    "global_cangjie_wrapper:ohos.resource_manager",
    "hiviewdfx_cangjie_wrapper:ohos.hilog",
    "multimedia_cangjie_wrapper:ohos.multimedia.image",
    "window_cangjie_wrapper:ohos.window",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:appkit_native",
    "ability_runtime:cj_ability_context_native",
    "ability_runtime:cj_ability_ffi",
    "ability_runtime:cj_abilitykit_native_ffi",
    "ability_runtime:cj_context_ffi",
    "ability_runtime:cj_extensionkit_native",
    "ability_runtime:cj_insight_intent_executor",
    "ability_runtime:cj_insightintentcontext",
    "ability_runtime:cj_photo_editor_extension",
    "ability_runtime:cj_ui_extension",
    "ability_runtime:cj_want_agent_ffi",
    "ability_runtime:uiabilitykit_native",
    "access_token:cj_ability_access_ctrl_ffi",
  ]

  subsystem_name = "ability"
  part_name = "ability_cangjie_wrapper"
}
